  
  [ Michael Vogt ]
  * README:
    - document menu.d/ directory
  * softwarecenter/view/catview.py:
    - add SCPkgname xml filter
  * apt-xapian-index-plugin/software-center.py:
    - add custom apt-xapian-index plugins for indexing 
      "XB-Softwarecenter-Appname" in debian/control
  * apt-xapian-index-plugin/origin.py:
    - add custom apt-xapian-index plugins for indexing the origins
    (disabled for now as it makes the origin list very slow)

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 11 Feb 2010 11:28:45 -0500

software-center (1.1.11) lucid; urgency=low

  [ Michael Vogt ]
  * make action buttons in the appview insensitive while a action
    is in progress
  * added po/th.po:
    - thanks to Sira Nokyoonhtong 
  * merge lp:~tomeu/software-center/bug-fixes that makes the 
    "No screenshot available" text translatable, thanks to
    Tomeu Vizoso (LP: #443066)
  * softwarecenter/backend/aptd.py:
    - only set meta-data that is actually available (LP: #499392)
  * utils/update-software-center:
    - warn if locale can not be set (LP: #516266)
  * merge branch lp:~juliank/software-center/debian (many thanks)
  * merge lp:~mvo/software-center/spinner, this gives us inline
    progress

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - add support for using the up/down arrow keys to select
      items in the navigation pane (LP: #517271)
  * softwarecenter/distro/Ubuntu.py,
    po/software-center.pot:
    - fix typo for apps with unknown maintenance status,
      refreshed .pot file (LP: #519090) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Feb 2010 16:45:47 +0100

software-center (1.1.10debian2) unstable; urgency=low

  * softwarecenter/db/update.py:
    - Use logging.warning instead of logging.exception (Closes: #568941)

 -- Julian Andres Klode <jak@debian.org>  Tue, 09 Feb 2010 07:40:07 +0100

software-center (1.1.10debian1) unstable; urgency=low

  * Merge with Ubuntu.
  * debian/control:
    - Reindent with spaces only.