@@ -34,6 +34,14 @@ class Ubuntu(Distro):
     SCREENSHOT_THUMB_URL =  "http://screenshots.ubuntu.com/thumbnail-404/%s"
     SCREENSHOT_LARGE_URL = "http://screenshots.ubuntu.com/screenshot-404/%s"
 
+    def get_distro_channel_name(self):
+        """ The name in the Release file """
+        return "Ubuntu"
+
+    def get_distro_channel_description(self):
+        """ The description of the main distro channel """
+        return _("Provided by Ubuntu")
+
     def get_removal_warning_text(self, cache, pkg, appname):
         primary = _("To remove %s, these items must be removed "
                     "as well:" % appname)
