@@ -29,6 +29,14 @@ class Distro(object):
     IMAGE_THUMBNAIL_MISSING = "/usr/share/software-center/images/dummy-thumbnail-ubuntu.png"
     IMAGE_FULL_MISSING = "/usr/share/software-center/images/dummy-screenshot-ubuntu.png"
 
+    def get_distro_channel_name(self):
+        """ The name in the Release file """
+        return "none"
+
+    def get_distro_channel_description(self):
+        """ The name in the Release file """
+        return "none"
+
     def get_rdepends_text(self, pkg):
         raise UnimplementedError
 
@@ -38,20 +46,22 @@ class Distro(object):
     def get_license_text(self, component):
         raise UnimplementedError
 
-def get_distro():
+def _get_distro():
     distro_id = subprocess.Popen(["lsb_release","-i","-s"], 
                                  stdout=subprocess.PIPE).communicate()[0].strip()
     logging.debug("get_distro: '%s'" % distro_id)
-    importstr = "softwarecenter.distro.%s" % distro_id
     # start with a import, this gives us only a softwarecenter module
-    module =  __import__(importstr)
-    # go down to the right sub-level module
-    for s in importstr.split(".")[1:]:
-        module =  getattr(module, s)
+    module =  __import__(distro_id, globals(), locals(), [], -1)
     # get the right class and instanciate it
     distro_class = getattr(module, distro_id)
     instance = distro_class()
     return instance
+
+def get_distro():
+    return distro_instance
+
+# singelton
+distro_instance=_get_distro()
 
 
 if __name__ == "__main__":
